name:                  abs2haskell
version:               1.9.8
synopsis:              a transcompiler from the ABS language to Haskell
description:           a transcompiler from the ABS language to Haskell
author:                Nikolaos Bezirgiannis
maintainer:            NikolaosBezirgiannis <bezirgia@cwi.nl>
stability:             provisional
license:               BSD3
license-file:          LICENSE
category:              Concurrency, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.8
                      
Source-repository head
  type:     git
  location: git://github.com/bezirg/abs2haskell.git
  branch: cloud

-- this library include the ABS stdlib & runtime, exported and installed as a Haskell package
library
  build-depends:      base >= 4.4 && < 5,
                      -- temporal support for arrays in ABS (PA case study)
                      random, clock, array,
                      transformers>=0.4,
                      -- containers-0.5.0.0 introduces strict containers, comes bundled with ghc>=7.6.3
                      containers>=0.5.0.0,
                      -- for lifting exceptions to ABS monad
                      exceptions>=0.6.1,
                      cmdargs,
                      -- for injecting package version into cmdargs --help menu
                      cabal-file-th
  exposed-modules:    
                     -- imitating the abslang.abs
                     Lang.ABS.StdLib,
                     -- the ABS-Haskell runtime system
                     -- declarations of data structures used in the Runtime
                     Lang.ABS.Runtime.Base,
                     -- runtime building-blocks reflecting the primitives of the ABS language (its keywords/statements)
                     Lang.ABS.Runtime.Prim,
                     -- compiler generates Haskell-code that depends on this wrapper module of helper functions 
                     -- to make generated code short and readable
                     Lang.ABS.Compiler.Include
  other-modules:
                     -- the underlying modules of the ABS stdlib
                     Lang.ABS.StdLib.Prelude,                    
                     -- the ABS-RTS-options
                     Lang.ABS.Runtime.Conf
  extensions:         LambdaCase
  ghc-options:       -Wall
  hs-source-dirs:    src

-- this is the (trans)compiler that translate ABS to Haskell
executable a2h
  main-is:            Lang/ABS/Compiler/Main.hs
  other-modules:
                      -- compiler options passed to compiler program
                      Lang.ABS.Compiler.Conf,
                      -- datatypes used during the compilation phase
                      Lang.ABS.Compiler.Base,
                      -- the translate-functions for top-level ABS code
                      Lang.ABS.Compiler.Top,
                      -- the translate-functions for ABS statements
                      Lang.ABS.Compiler.Stmt,
                      -- the translate-functions for pure-expressions and effectful expressions, running in the ABS-object-layer  
                      Lang.ABS.Compiler.ExprLifted,
                      -- the translate-functions for the (pure) functional core of ABS
                      Lang.ABS.Compiler.Expr,
                      -- utility functions used by Main,Top,Stmt,Expr
                      Lang.ABS.Compiler.Utils,
                      -- lexer (generated by BNFC)
                      Lang.ABS.Compiler.BNFC.LexABS,
                      -- parser (generated by BNFC)             
                      Lang.ABS.Compiler.BNFC.ParABS,
                      -- abstract-syntax-tree AST (generated by BNFC)
                      Lang.ABS.Compiler.BNFC.AbsABS
                      -- -- pretty-printer for ABS language (generated by BNFC, not needed right now)
                      -- PrintABS, 
                      -- -- example compiler skeleton (generated by BNFC, not needed in the library)
                      -- SkelABS

  build-depends:      base,
                      -- array needed by generated parser
                      array,
                      transformers>=0.4,
                      -- containers-0.5.0.0 introduces strict containers, comes bundled with ghc>=7.6.3
                      containers>=0.5.0.0,
                      cmdargs,
                      filepath,
                      directory,
                      -- hse 1.16, datatype-incompatible
                      haskell-src-exts<1.16,
                      -- for injecting package version into cmdargs --help menu
                      cabal-file-th
  extensions:         LambdaCase,
                      ImplicitParams
  ghc-options:        -Wall 
  hs-source-dirs:     src
