name:                  abs2haskell
version:               1.8.6
synopsis:              a transcompiler from the ABS language to Haskell
description:           a transcompiler from the ABS language to Haskell
author:                Nikolaos Bezirgiannis
maintainer:            NikolaosBezirgiannis <bezirgia@cwi.nl>
stability:             provisional
license:               BSD3
license-file:          LICENSE
category:              Concurrency, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.8
                      
Source-repository head
  type:     git
  location: git://github.com/bezirg/abs2haskell.git
  branch: cloud

-- this library include the ABS stdlib & runtime, exported and installed as a Haskell package
library
  build-depends:      base >= 4.4 && < 5,

                      -- DATATYPES (incl. closures)
                      transformers>=0.4,
                      monad-coroutine>=0.9.0.1,
                      -- containers-0.5.0.0 introduces strict containers, comes bundled with ghc>=7.6.3
                      containers>=0.5.0.0,
                      -- for lifting exceptions to ABS monad
                      exceptions>=0.6.1,

                      -- DATATYPES SERIALIZATION (data, closures)
                      rank1dynamic>=0.3.1.0, 
                      distributed-static>=0.3.2.0,
                      binary>=0.7.5.0,
                      bytestring,
                      base64-bytestring,

                      -- NETWORK COMMUNICATION
                      -- for contacting OpenNebula through XML-RPC
                      opennebula>=0.1.0, 
                      -- OS-generic way to read the info of network hardware: MAC, IP
                      network-info, 
                      -- for cloud abs / distributed communication of Haskell nodes
                      distributed-process>=0.5.5, 
                      -- usual distributed-network transport through TCP
                      network-transport-tcp>=0.4.2, 
                      network-transport>=0.4.2.0, 
                      -- for Windows fix
                      network>=2.6.0.2,
                      -- for Local DC spawning
                      process,

                      -- for command-line arguments menu
                      cmdargs,
                      cabal-file-th,

                      -- for demo with graphs
                      scotty>=0.10.2

  exposed-modules:    
                     -- imitating the abslang.abs
                     Lang.ABS.StdLib,
                     -- a DC implementation, connecting to OpenNebula
                     NebulaDC
                     -- a localhost implementation
                     LocalDC,
                     -- the ABS-Haskell runtime system
                     -- declarations of data structures used in the Runtime
                     Lang.ABS.Runtime.Base,
                     -- the logic of the main thread and each COG thread of the ABS-Runtime
                     Lang.ABS.Runtime.Core,
                     -- runtime building-blocks reflecting the primitives of the ABS language (its keywords/statements)
                     Lang.ABS.Runtime.Prim,
                     -- compiler generates Haskell-code that depends on this wrapper module of helper functions 
                     -- to make generated code short and readable
                     Lang.ABS.Compiler.Include
  other-modules:
                     -- the underlying modules of the ABS stdlib
                     Lang.ABS.StdLib.Prelude,                    
                     Lang.ABS.StdLib.DC,
                     Lang.ABS.StdLib.NebulaDC,
                     Lang.ABS.StdLib.LocalDC,
                     -- the ABS-RTS-options
                     Lang.ABS.Runtime.Conf
  extensions:        LambdaCase
  ghc-options:       -Wall
  hs-source-dirs:    src

-- this is the (trans)compiler that translate ABS to Haskell
executable a2h
  main-is:            Lang/ABS/Compiler/Main.hs
  other-modules:
                      -- compiler options passed to compiler program
                      Lang.ABS.Compiler.Conf,
                      -- datatypes used during the compilation phase
                      Lang.ABS.Compiler.Base,
                      -- the translate-functions for top-level ABS code
                      Lang.ABS.Compiler.Top,
                      -- the translate-functions for ABS statements
                      Lang.ABS.Compiler.Stmt,
                      -- the translate-functions for pure-expressions and effectful expressions, running in the ABS-object-layer  
                      Lang.ABS.Compiler.ExprLifted,
                      -- the translate-functions for the (pure) functional core of ABS
                      Lang.ABS.Compiler.Expr,
                      -- utility functions used by Main,Top,Stmt,Expr
                      Lang.ABS.Compiler.Utils,
                      -- lexer (generated by BNFC)
                      Lang.ABS.Compiler.BNFC.LexABS,
                      -- parser (generated by BNFC)             
                      Lang.ABS.Compiler.BNFC.ParABS,
                      -- abstract-syntax-tree AST (generated by BNFC)
                      Lang.ABS.Compiler.BNFC.AbsABS
                      -- -- pretty-printer for ABS language (generated by BNFC, not needed right now)
                      -- PrintABS, 

  build-depends:      base>=4.4 && <5,

                      -- PARSING
                      -- the v1.16 is datatype-incompatible
                      haskell-src-exts<1.16,
                      -- array needed by BNFC-generated parser
                      array,

                      -- DATATYPES used&passed around during compilation
                      -- containers-0.5.0.0 introduces strict containers, comes bundled with ghc>=7.6.3
                      containers>=0.5.0.0,
                      transformers>=0.4,

                      -- FILE UTILS
                      filepath,
                      directory,

                      -- for command-line arguments menu
                      cmdargs,
                      cabal-file-th

  extensions:         LambdaCase,
                      -- used for implicitly passing around a "ModuleTable"
                      ImplicitParams
  ghc-options:        -Wall 
  hs-source-dirs:     src
